# UCLA-CS130-Software-Engineering

./: .gitignore  AUTHORS.md  README.md  Report.md
Assignment1_Unit_Tests/docker/: Dockerfile  cloudbuild.yaml
Assignment1_Unit_Tests/jonnykong-config-parser/: .dockerignore  .gitignore  CMakeLists.txt
Assignment1_Unit_Tests/jonnykong-config-parser/include/: config_parser.h
Assignment1_Unit_Tests/jonnykong-config-parser/src/: config_parser.cc  config_parser_main.cc
Assignment1_Unit_Tests/jonnykong-config-parser/tests/: config_parser_test.cc  example_config1  example_config10  example_config11  example_config13  example_config3
Assignment1_Unit_Tests/tests/: example_config  example_config2  example_config4  example_config5  example_config6  example_config7  example_config8  example_config9
Assignment2_Echo_Server/: .gitignore  CMakeLists.txt
Assignment2_Echo_Server/conf/: example.conf
Assignment2_Echo_Server/docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml
Assignment2_Echo_Server/include/: config_parser.h  logger.h  request_handler_dispatcher.h  server.h  session.h
Assignment2_Echo_Server/include/http/: header.h  reply.h  request.h  request_parser.h
Assignment2_Echo_Server/include/request_handler/: request_handler.h  request_handler_echo.h
Assignment2_Echo_Server/src/: config_parser.cc  logger.cc  request_handler_dispatcher.cc  server.cc  server_main.cc  session.cc
Assignment2_Echo_Server/src/http/: mime_types.cc  request_parser.cc
Assignment2_Echo_Server/src/request_handler/: request_handler_static.cc
Assignment2_Echo_Server/tests/: 2  config_parser_test.cc  example_config  integrated_test.cc  invalid_left_parenthesis_config  invalid_right_parenthesis_config  nested_loop_config  no_port_config  reply_test.cc  request_parser_test.cc  server_test.cc  session_test.cc  test.sh  test2.sh  test_port_number  test_response1  test_response2
Assignment4_Static_File_Server/: CMakeLists.txt
Assignment4_Static_File_Server/conf/: example.conf
Assignment4_Static_File_Server/docker/: cloudbuild.yaml
Assignment4_Static_File_Server/include/: request_handler_dispatcher.h  server.h  session.h
Assignment4_Static_File_Server/src/: logger.cc
Assignment4_Static_File_Server/tests/: config_parser_test.cc  double_quote_error  invalid_left_parenthesis_config  large_port_config  request_handler_test.cc  statement_end_error  test2.sh
Assignment6_Refactoring/: CMakeLists.txt  example_config
Assignment6_Refactoring/conf/: example.conf  http.conf
Assignment6_Refactoring/docker/: base.Dockerfile  coverage.Dockerfile
Assignment6_Refactoring/include/: request_handler_dispatcher.h  server.h  session.h
Assignment6_Refactoring/src/: request_handler_dispatcher.cc  server_main.cc  session.cc
Assignment6_Refactoring/tests/: request_handler_test.cc  session_test.cc  test.sh  test2.sh
Assignment7_Multhreading/bigbear/: CMakeLists.txt  README  sample_server_config  server_8080_port
Assignment7_Multhreading/bigbear/docker/: Dockerfile  base.Dockerfile  build.sh  cloudbuild.yaml  coverage.Dockerfile
Assignment7_Multhreading/bigbear/include/: action_request_handler.h  config_parser.h  error_request_handler.h  handler_manager.h  http_request.h  http_request_enums.h  http_response.h  nginx_config.h  nginx_config_tokens.h  nginx_enums.h  proxy_request_handler.h  redirect_request_handler.h  request_handler.h  request_handler_dispatcher.h  server.h  session.h  static_file_request_handler.h  status_request_handler.h
Assignment7_Multhreading/bigbear/shell_tests/: expected.txt  integration_test.sh  response.txt  test_config  test_threads.sh
Assignment7_Multhreading/bigbear/src/: action_request_handler.cc  error_request_handler.cc  handler_manager.cc  http_request.cc  http_response.cc  proxy_request_handler.cc  redirect_request_handler.cc  request_handler_dispatcher.cc  server.cc  server_main.cc  session.cc  static_file_request_handler.cc  status_request_handler.cc
Assignment7_Multhreading/bigbear/src/config_parser/: README  config_parser.cc  nginx_config.cc  nginx_config_tokens.cc
Assignment7_Multhreading/bigbear/static_files/: 404error.html
Assignment7_Multhreading/bigbear/static_files/more_files/: bears.html
Assignment7_Multhreading/bigbear/static_files/some_files/: bearlist.txt  first.txt  home.html  second.txt
Assignment7_Multhreading/bigbear/tests/config_parser_tests/: config_parser_test.cc  example_config  missing_braces  nginx_config_tokens_test.cc  unclosed_quotes  valid_config
Assignment7_Multhreading/bigbear/tests/dispatcher_tests/: dispatcher_test.cc
Assignment7_Multhreading/bigbear/tests/http_request_object_tests/: http_request_test.cc
Assignment7_Multhreading/bigbear/tests/request_handler_tests/: action_request_handler_test.cc  proxy_request_handler_test.cc  request_manager_test.cc  static_file_request_handler_test.cc
Assignment7_Multhreading/bigbear/tests/server_tests/: server_test.cc  session_test.cc
Assignment7_Multhreading/rubberduck_server/: CMakeLists.txt
Assignment7_Multhreading/rubberduck_server/conf/: example.conf  http.conf
Assignment7_Multhreading/rubberduck_server/docker/: Dockerfile
Assignment7_Multhreading/rubberduck_server/include/: logger.h  request_handler_dispatcher.h
Assignment7_Multhreading/rubberduck_server/include/http/: reply.h  request_parser.h
Assignment7_Multhreading/rubberduck_server/include/request_handler/: request_handler_echo.h  request_handler_error.h  request_handler_static.h
Assignment7_Multhreading/rubberduck_server/src/: request_handler_dispatcher.cc  server.cc  server_main.cc
Assignment7_Multhreading/rubberduck_server/src/http/: mime_types.cc  reply.cc
Assignment7_Multhreading/rubberduck_server/src/request_handler/: request_handler_error.cc  request_handler_status.cc
Assignment7_Multhreading/rubberduck_server/tests/: reply_test.cc  request_handler_test.cc  server_test.cc  test.sh  test_concurrency.sh
Assignment7_Multhreading/rubberduck_server/tests/conf/: double_quote  endl_double_quote  invalid_port  negative_port_config
Assignment8_Meme/: CMakeLists.txt  README.md  rebuild_test.sh
(+87 files in other folders)
